# LoreWeaver

./: .env  .env.example  .gitignore  README.md  config_neo4j.py  demo_rag.py  pyproject.toml  relation_graph.html  requirements.txt
archive/output/deepseek/: location_graph.json.bak
archive/output/qwen3/: adventure_resolved.json  semantic_graph.json
archive/scripts/: __init__.py  find_types.py  visualize_from_neo4j.py
archive/src/: main.py
archive/src/builder/: node_builder.py
archive/src/graph_builder/: __init__.py  visualizer.py
archive/src/llm/: base_processor.py  entity_processor.py  prompt_factory.py
archive/src/preprocessor/: adventure_parser.py  entity_resolver.py
archive/src/utils/: graph_utils.py  link_processor.py  tree_traversal.py
archive/tests/samples/: Stormwreck_Isle.txt
data/: adventure-dosi-parsed.json  adventure-dosi-resolved.json  data overview.md
docs/: NEO4J_SETUP.md  Qwen3_8B.md
frontend/: README.md  app.py  temp_graph.html
logs/: debug.txt  truncated_20251230_021431.txt
output/: adventure-dosi.json  adventure-lmop.json  entity_graph.json  location_graph.json  shadow_tree.json  shadow_tree_with_spatial_summary.json  summarized_tree.json  test_llm.json
output/deepseek/: final.json  section_location_map.json  shadow_tree.json
output/deepseek/visualizations/: entity_graph.html
output/qwen3/: adventure_parsed.json  adventure_resolved.json  debug_phase1_combined_entities.json  debug_phase1_combined_relations.json  debug_phase1_ner_raw.json  debug_phase1_unified_entities.json  debug_phase1_unified_events.json  debug_phase2_alias_map.json  debug_phase2_resolved_entities.json  debug_phase3_relations.json  entity_graph.json  location_graph.json  section_location_map.json  semantic_graph.json  shadow_tree.json  shadow_tree_with_spatial_summary.json
output/qwen3/semantic_debug/: debug_phase1_unified_entities.json  debug_phase1_unified_events.json  debug_phase2_5_location_hierarchies.json  debug_phase2_6_semantic_relations.json
output/qwen3/visualizations/: combined_graph.html  entity_graph.html  (+1 more)
output/truncation_debug/: debug.txt  truncated_20251230_031600.txt  truncated_20251230_052943.txt  truncated_20251230_053636.txt  truncated_20251230_064842.txt  truncated_20251230_065240.txt  truncated_20251230_065437.txt  truncated_20251230_070029.txt  truncated_20251230_121941.txt  truncated_20251230_122240.txt  truncated_20251230_122416.txt  truncated_20251230_122456.txt  truncated_20251230_122524.txt  truncated_20251230_122815.txt  truncated_20251230_122842.txt  truncated_20251230_123012.txt  truncated_20251230_123039.txt  truncated_20251230_123220.txt  truncated_20251230_123314.txt
output/visualizations/: entity_graph.html  location_graph.html
scripts/: build_graph.py  explore_data.py  find_types.py  visualize_filtered_graph.py  visualize_from_neo4j.py  visualize_relations.py  visualize_semantic_graph.py
scripts/evaluation/: __init__.py  compare_entities.py  debug_extraction.py  evaluate_extraction.py
src/: config_neo4j.py  evaluate_extraction.py  main.py  main_semantic.py
src/builder/: node_builder.py  shadow_builder.py
src/graphRAG/: rag_engine.py
src/graph_builder/: __init__.py  neo4j_builder.py  visualizer.py
src/llm/: base_processor.py  context_window.py  entity_processor.py  natural_parsers.py  processor.py  prompt_factory.py  small_model_processor.py  spatial_processor.py  summary_processor.py
src/lorewriter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/models/: __init__.py  graph_schemas.py
src/preprocessor/: adventure_parser.py  explore.py
src/qwen3_8b/: .env.example  __init__.py  main.py
src/utils/: link.py  link_processor.py  logger.py  resolver.py  schemas.py
tests/: test_entity_detection.py
tests/samples/: Stormwreck_Isle.txt
(+16 files in other folders)
