[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lorewriter"
version = "0.1.0"
description = "An automated pipeline to convert D&D module PDFs/Texts into Knowledge Graphs for GraphRAG"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai",
    "neo4j",
    "pyvis",
]

[tool.setuptools.packages.find]
where = ["src"]
