[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lorewriter"
version = "0.1.0"
description = "An automated pipeline to convert D&D module PDFs/Texts into Knowledge Graphs for GraphRAG"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai",
    "python-dotenv",
    "pydantic>=2.0",
    "sentence-transformers",
]

[project.optional-dependencies]
ui = [
    "streamlit",
    "pyvis",
    "networkx",
]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-asyncio",
]

[project.scripts]
lorewriter = "main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

# ========================================================================
# Ruff Configuration
# ========================================================================
[tool.ruff]
target-version = "py310"
line-length = 100
indent-width = 4

# Directories to exclude from linting
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
# Enable recommended rules
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort (import sorting)
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # Ruff-specific rules
]

# Ignore specific rules that may be too strict
ignore = [
    "E501",   # Line too long (handled by formatter)
    "B008",   # Do not perform function calls in argument defaults
    "UP007",  # Allow X | Y union syntax (Pydantic v2 compatible)
    "RUF002", # Allow Chinese characters in docstrings
    "RUF003", # Allow Chinese characters in comments
    "RUF001", # Allow Chinese characters in strings
    "W191",   # Allow tabs in test/data files
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["src"]

# ========================================================================
# MyPy Configuration (optional, for type checking)
# ========================================================================
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Gradually enable this
ignore_missing_imports = true
